cmake_minimum_required (VERSION 3.13.4)

project (AtC)
set(CMAKE_CXX_FLAGS "-D=_LOCAL -std=c++14 -Wall -ftrapv")

# Download and unpack googletest at configure time
# https://cmake.org/cmake/help/latest/command/configure_file.html 
configure_file(libs/Googletest.txt.in googletest/CMakeLists.txt)
execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
  RESULT_VARIABLE result
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest)
if(result)
  message(FATAL_ERROR "CMake step for googletest failed: ${result}") 
endif()
execute_process(COMMAND ${CMAKE_COMMAND} --build .
  RESULT_VARIABLE result
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest)
if(result)
  message(FATAL_ERROR "Build step for googletest failed: ${result}")
endif()

configure_file(libs/Boost.txt.in boost/CMakeLists.txt)
execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
  RESULT_VARIABLE result
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/boost)
if(result)
  message(FATAL_ERROR "CMake step for boost failed: ${result}")
endif() 
execute_process(COMMAND ${CMAKE_COMMAND} --build .
  RESULT_VARIABLE result
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/boost)
if(result)
  message(FATAL_ERROR "Build step for boost failed: ${result}")
endif()

# Add googletest directly to our build. This defines
# the gtest and gtest_main targets.
add_subdirectory(${CMAKE_BINARY_DIR}/googletest/base/src/googletest
                 EXCLUDE_FROM_ALL)

include_directories(${CMAKE_BINARY_DIR}/boost/base/src/boost)

#  https://www.dropbox.com/sh/arnpe0ef5wds8cv/AAAk_SECQ2Nc6SVGii3rHX6Fa?dl=0
enable_testing()
add_subdirectory(src/arc112)
add_subdirectory(tests/arc112)
add_subdirectory(src/abc001)
add_subdirectory(tests/abc001)
add_subdirectory(src/abc002)
add_subdirectory(tests/abc002)
add_subdirectory(src/abc003)
add_subdirectory(tests/abc003)
add_subdirectory(src/abc005)
add_subdirectory(tests/abc005)
add_subdirectory(src/abc006)
add_subdirectory(tests/abc006)
add_subdirectory(src/abc007)
add_subdirectory(tests/abc007)
add_subdirectory(src/abc008)
add_subdirectory(tests/abc008)
add_subdirectory(src/abc009)
add_subdirectory(tests/abc009)
add_subdirectory(src/abc011)
add_subdirectory(tests/abc011)
add_subdirectory(src/abc012)
add_subdirectory(tests/abc012)
add_subdirectory(src/abc013)
add_subdirectory(tests/abc013)
add_subdirectory(src/abc014)
add_subdirectory(tests/abc014)
add_subdirectory(src/abc015)
add_subdirectory(tests/abc015)
add_subdirectory(src/abc016)
add_subdirectory(tests/abc016)
add_subdirectory(src/abc017)
add_subdirectory(tests/abc017)
add_subdirectory(src/abc018)
add_subdirectory(tests/abc018)
add_subdirectory(src/abc019)
add_subdirectory(tests/abc019)
add_subdirectory(src/abc020)
add_subdirectory(tests/abc020)
add_subdirectory(src/abc021)
add_subdirectory(tests/abc021)
add_subdirectory(src/abc022)
add_subdirectory(tests/abc022)
add_subdirectory(src/abc023)
add_subdirectory(tests/abc023)
add_subdirectory(src/abc024)
add_subdirectory(tests/abc024)
add_subdirectory(src/abc025)
add_subdirectory(tests/abc025)
add_subdirectory(src/abc026)
add_subdirectory(tests/abc026)
add_subdirectory(src/abc027)
add_subdirectory(tests/abc027)
add_subdirectory(src/abc028)
add_subdirectory(tests/abc028)
add_subdirectory(src/abc030)
add_subdirectory(tests/abc030)
add_subdirectory(src/abc031)
add_subdirectory(tests/abc031)
add_subdirectory(src/abc032)
add_subdirectory(tests/abc032)
add_subdirectory(src/abc034)
add_subdirectory(tests/abc034)
add_subdirectory(src/abc035)
add_subdirectory(tests/abc035)
add_subdirectory(src/abc036)
add_subdirectory(tests/abc036)
add_subdirectory(src/abc037)
add_subdirectory(tests/abc037)
add_subdirectory(src/abc038)
add_subdirectory(tests/abc038)
add_subdirectory(src/abc040)
add_subdirectory(tests/abc040)
add_subdirectory(src/abc042)
add_subdirectory(tests/abc042)
add_subdirectory(src/abc044)
add_subdirectory(tests/abc044)
add_subdirectory(src/abc045)
add_subdirectory(tests/abc045)
add_subdirectory(src/abc046)
add_subdirectory(tests/abc046)
add_subdirectory(src/abc048)
add_subdirectory(tests/abc048)
add_subdirectory(src/abc049)
add_subdirectory(tests/abc049)
add_subdirectory(src/abc050)
add_subdirectory(tests/abc050)
add_subdirectory(src/abc051)
add_subdirectory(tests/abc051)
add_subdirectory(src/abc052)
add_subdirectory(tests/abc052)
add_subdirectory(src/abc053)
add_subdirectory(tests/abc053)
add_subdirectory(src/abc054)
add_subdirectory(tests/abc054)
add_subdirectory(src/abc056)
add_subdirectory(tests/abc056)
add_subdirectory(src/abc057)
add_subdirectory(tests/abc057)
add_subdirectory(src/abc058)
add_subdirectory(tests/abc058)
add_subdirectory(src/abc059)
add_subdirectory(tests/abc059)
add_subdirectory(src/abc060)
add_subdirectory(tests/abc060)
add_subdirectory(src/abc061)
add_subdirectory(tests/abc061)
add_subdirectory(src/abc062)
add_subdirectory(tests/abc062)
add_subdirectory(src/abc063)
add_subdirectory(tests/abc063)
add_subdirectory(src/abc064)
add_subdirectory(tests/abc064)
add_subdirectory(src/abc065)
add_subdirectory(tests/abc065)
add_subdirectory(src/abc066)
add_subdirectory(tests/abc066)
add_subdirectory(src/abc067)
add_subdirectory(tests/abc067)
add_subdirectory(src/abc068)
add_subdirectory(src/abc069)
add_subdirectory(src/abc070)
add_subdirectory(tests/abc070)
add_subdirectory(src/abc071)
add_subdirectory(tests/abc071)
add_subdirectory(src/abc072)
add_subdirectory(tests/abc072)
add_subdirectory(src/abc073)
add_subdirectory(tests/abc073)
add_subdirectory(src/abc074)
add_subdirectory(tests/abc074)
add_subdirectory(src/abc075)
add_subdirectory(tests/abc075)
add_subdirectory(src/abc076)
add_subdirectory(tests/abc076)
add_subdirectory(src/abc077)
add_subdirectory(tests/abc077)
add_subdirectory(src/abc078)
add_subdirectory(tests/abc078)
add_subdirectory(src/abc079)
add_subdirectory(src/abc080)
add_subdirectory(tests/abc080)
add_subdirectory(src/abc081)
add_subdirectory(src/abc082)
add_subdirectory(tests/abc082)
add_subdirectory(src/abc083)
add_subdirectory(tests/abc083)
add_subdirectory(src/abc084)
add_subdirectory(tests/abc084)
add_subdirectory(src/abc085)
add_subdirectory(tests/abc085)
add_subdirectory(src/abc086)
add_subdirectory(tests/abc086)
add_subdirectory(src/abc087)
add_subdirectory(tests/abc087)
add_subdirectory(src/abc088)
add_subdirectory(tests/abc088)
add_subdirectory(src/abc089)
add_subdirectory(tests/abc089)
add_subdirectory(src/abc090)
add_subdirectory(tests/abc090)
add_subdirectory(src/abc091)
add_subdirectory(tests/abc091)
add_subdirectory(src/abc092)
add_subdirectory(tests/abc092)
add_subdirectory(src/abc093)
add_subdirectory(tests/abc093)
add_subdirectory(src/abc094)
add_subdirectory(tests/abc094)
add_subdirectory(src/abc095)
add_subdirectory(tests/abc095)
add_subdirectory(src/abc096)
add_subdirectory(tests/abc096)
add_subdirectory(src/abc097)
add_subdirectory(tests/abc097)
add_subdirectory(src/abc098)
add_subdirectory(tests/abc098)
add_subdirectory(src/abc099)
add_subdirectory(tests/abc099)
add_subdirectory(src/abc100)
add_subdirectory(tests/abc100)
add_subdirectory(src/abc101)
add_subdirectory(tests/abc101)
add_subdirectory(src/abc102)
add_subdirectory(tests/abc102)
add_subdirectory(src/abc103)
add_subdirectory(tests/abc103)
add_subdirectory(src/abc104)
add_subdirectory(tests/abc104)
add_subdirectory(src/abc105)
add_subdirectory(tests/abc105)
add_subdirectory(src/abc106)
add_subdirectory(tests/abc106)
add_subdirectory(src/abc107)
add_subdirectory(tests/abc107)
add_subdirectory(src/abc108)
add_subdirectory(tests/abc108)
add_subdirectory(src/abc109)
add_subdirectory(tests/abc109)
add_subdirectory(src/abc110)
add_subdirectory(tests/abc110)
add_subdirectory(src/abc111)
add_subdirectory(tests/abc111)
add_subdirectory(src/abc112)
add_subdirectory(tests/abc112)
add_subdirectory(src/abc113)
add_subdirectory(tests/abc113)
add_subdirectory(src/abc114)
add_subdirectory(tests/abc114)
add_subdirectory(src/abc115)
add_subdirectory(tests/abc115)
add_subdirectory(src/abc116)
add_subdirectory(tests/abc116)
add_subdirectory(src/abc117)
add_subdirectory(tests/abc117)
add_subdirectory(src/abc118)
add_subdirectory(tests/abc118)
add_subdirectory(src/abc119)
add_subdirectory(tests/abc119)
add_subdirectory(src/abc120)
add_subdirectory(tests/abc120)
add_subdirectory(src/abc121)
add_subdirectory(tests/abc121)
add_subdirectory(src/abc122)
add_subdirectory(tests/abc122)
add_subdirectory(src/abc123)
add_subdirectory(tests/abc123)
add_subdirectory(src/abc124)
add_subdirectory(tests/abc124)
add_subdirectory(src/abc125)
add_subdirectory(tests/abc125)
add_subdirectory(src/abc126)
add_subdirectory(tests/abc126)
add_subdirectory(src/abc127)
add_subdirectory(tests/abc127)
add_subdirectory(src/abc128)
add_subdirectory(tests/abc128)
add_subdirectory(src/abc129)
add_subdirectory(tests/abc129)
add_subdirectory(src/abc130)
add_subdirectory(tests/abc130)
add_subdirectory(src/abc131)
add_subdirectory(tests/abc131)
add_subdirectory(src/abc132)
add_subdirectory(tests/abc132)
add_subdirectory(src/abc133)
add_subdirectory(tests/abc133)
add_subdirectory(src/abc134)
add_subdirectory(tests/abc134)
add_subdirectory(src/abc135)
add_subdirectory(tests/abc135)
add_subdirectory(src/abc136)
add_subdirectory(tests/abc136)
add_subdirectory(src/abc137)
add_subdirectory(tests/abc137)
add_subdirectory(src/abc138)
add_subdirectory(tests/abc138)
add_subdirectory(src/abc139)
add_subdirectory(tests/abc139)
add_subdirectory(src/abc140)
add_subdirectory(tests/abc140)
add_subdirectory(src/abc141)
add_subdirectory(tests/abc141)
add_subdirectory(src/abc142)
add_subdirectory(tests/abc142)
add_subdirectory(src/abc143)
add_subdirectory(tests/abc143)
add_subdirectory(src/abc144)
add_subdirectory(tests/abc144)
add_subdirectory(src/abc145)
add_subdirectory(tests/abc145)
add_subdirectory(src/abc146)
add_subdirectory(tests/abc146)
add_subdirectory(src/abc147)
add_subdirectory(tests/abc147)
add_subdirectory(src/abc148)
add_subdirectory(tests/abc148)
add_subdirectory(src/abc149)
add_subdirectory(tests/abc149)
add_subdirectory(src/abc150)
add_subdirectory(tests/abc150)
add_subdirectory(src/abc151)
add_subdirectory(tests/abc151)
add_subdirectory(src/abc152)
add_subdirectory(tests/abc152)
add_subdirectory(src/abc153)
add_subdirectory(tests/abc153)
add_subdirectory(src/abc154)
add_subdirectory(tests/abc154)
add_subdirectory(src/abc155)
add_subdirectory(tests/abc155)
add_subdirectory(src/abc156)
add_subdirectory(tests/abc156)
add_subdirectory(src/abc157)
add_subdirectory(tests/abc157)
add_subdirectory(src/abc158)
add_subdirectory(tests/abc158)
add_subdirectory(src/abc159)
add_subdirectory(tests/abc159)
add_subdirectory(src/abc160)
add_subdirectory(tests/abc160)
add_subdirectory(src/abc161)
add_subdirectory(tests/abc161)
add_subdirectory(src/abc162)
add_subdirectory(tests/abc162)
add_subdirectory(src/abc163)
add_subdirectory(tests/abc163)
add_subdirectory(src/abc164)
add_subdirectory(tests/abc164)
add_subdirectory(src/abc165)
add_subdirectory(tests/abc165)
add_subdirectory(src/abc166)
add_subdirectory(tests/abc166)
add_subdirectory(src/abc167)
add_subdirectory(tests/abc167)
add_subdirectory(src/abc168)
add_subdirectory(tests/abc168)
add_subdirectory(src/abc169)
add_subdirectory(tests/abc169)
add_subdirectory(src/abc170)
add_subdirectory(tests/abc170)
add_subdirectory(src/abc171)
add_subdirectory(tests/abc171)
add_subdirectory(src/abc172)
add_subdirectory(tests/abc172)
add_subdirectory(src/abc173)
add_subdirectory(tests/abc173)
add_subdirectory(src/abc174)
add_subdirectory(tests/abc174)
add_subdirectory(src/abc175)
add_subdirectory(tests/abc175)
add_subdirectory(src/abc176)
add_subdirectory(tests/abc176)
add_subdirectory(src/abc177)
add_subdirectory(tests/abc177)
add_subdirectory(src/abc178)
add_subdirectory(tests/abc178)
add_subdirectory(src/abc179)
add_subdirectory(tests/abc179)
add_subdirectory(src/abc180)
add_subdirectory(tests/abc180)
add_subdirectory(src/abc181)
add_subdirectory(tests/abc181)
add_subdirectory(src/abc182)
add_subdirectory(tests/abc182)
add_subdirectory(src/abc183)
add_subdirectory(tests/abc183)
add_subdirectory(src/abc184)
add_subdirectory(tests/abc184)
add_subdirectory(src/abc185)
add_subdirectory(tests/abc185)
add_subdirectory(src/abc186)
add_subdirectory(tests/abc186)
add_subdirectory(src/abc187)
add_subdirectory(tests/abc187)
add_subdirectory(src/abc188)
add_subdirectory(tests/abc188)
add_subdirectory(src/abc189)
add_subdirectory(tests/abc189)
add_subdirectory(src/abc190)
add_subdirectory(tests/abc190)
add_subdirectory(src/abc191)
add_subdirectory(tests/abc191)
add_subdirectory(src/abc192)
add_subdirectory(tests/abc192)
add_subdirectory(src/abc193)
add_subdirectory(tests/abc193)
add_subdirectory(src/tenka1_2017)
add_subdirectory(tests/tenka1_2017)