add_subdirectory(agc002)
add_subdirectory(agc005)
add_subdirectory(agc011)
add_subdirectory(agc016)
add_subdirectory(agc018)
add_subdirectory(agc023)
add_subdirectory(agc031)
add_subdirectory(agc033)
add_subdirectory(agc034)
add_subdirectory(agc036)
add_subdirectory(agc038)
add_subdirectory(agc043)
add_subdirectory(agc048)
add_subdirectory(agc058)

add_subdirectory(arc002)
add_subdirectory(arc003)
add_subdirectory(arc004)
add_subdirectory(arc005)
add_subdirectory(arc006)
add_subdirectory(arc007)
add_subdirectory(arc009)
add_subdirectory(arc010)
add_subdirectory(arc011)
add_subdirectory(arc013)
add_subdirectory(arc014)
add_subdirectory(arc017)
add_subdirectory(arc018)
add_subdirectory(arc020)
add_subdirectory(arc022)
add_subdirectory(arc023)
add_subdirectory(arc024)
add_subdirectory(arc025)
add_subdirectory(arc026)
add_subdirectory(arc027)
add_subdirectory(arc028)
add_subdirectory(arc029)
add_subdirectory(arc030)
add_subdirectory(arc031)
add_subdirectory(arc034)
add_subdirectory(arc035)
add_subdirectory(arc036)
add_subdirectory(arc037)
add_subdirectory(arc038)
add_subdirectory(arc039)
add_subdirectory(arc040)
add_subdirectory(arc041)
add_subdirectory(arc042)
add_subdirectory(arc043)
add_subdirectory(arc044)
add_subdirectory(arc051)
add_subdirectory(arc053)
add_subdirectory(arc054)
add_subdirectory(arc056)
add_subdirectory(arc057)
add_subdirectory(arc089)
add_subdirectory(arc092)
add_subdirectory(arc104)
add_subdirectory(arc105)
add_subdirectory(arc106)
add_subdirectory(arc107)
add_subdirectory(arc108)
add_subdirectory(arc109)
add_subdirectory(arc110)
add_subdirectory(arc111)
add_subdirectory(arc112)
add_subdirectory(arc113)
add_subdirectory(arc114)
add_subdirectory(arc115)
add_subdirectory(arc116)
add_subdirectory(arc117)
add_subdirectory(arc118)
add_subdirectory(arc119)
add_subdirectory(arc120)
add_subdirectory(arc121)
add_subdirectory(arc122)
add_subdirectory(arc123)
add_subdirectory(arc124)
add_subdirectory(arc125)
add_subdirectory(arc126)
add_subdirectory(arc127)
add_subdirectory(arc128)
add_subdirectory(arc129)
add_subdirectory(arc130)
add_subdirectory(arc131)
add_subdirectory(arc132)
add_subdirectory(arc133)
add_subdirectory(arc134)
add_subdirectory(arc135)
add_subdirectory(arc136)
add_subdirectory(arc137)
add_subdirectory(arc138)
add_subdirectory(arc139)
add_subdirectory(arc140)
add_subdirectory(arc141)
add_subdirectory(arc142)
add_subdirectory(arc143)
add_subdirectory(arc144)
add_subdirectory(arc145)
add_subdirectory(arc146)
add_subdirectory(arc147)
add_subdirectory(arc148)
add_subdirectory(arc149)
add_subdirectory(arc150)
add_subdirectory(arc151)
add_subdirectory(arc152)
add_subdirectory(arc153)
add_subdirectory(arc154)
add_subdirectory(arc155)
add_subdirectory(arc156)
add_subdirectory(arc157)

add_subdirectory(abc001)
add_subdirectory(abc002)
add_subdirectory(abc003)
add_subdirectory(abc004)
add_subdirectory(abc005)
add_subdirectory(abc006)
add_subdirectory(abc007)
add_subdirectory(abc008)
add_subdirectory(abc009)
add_subdirectory(abc010)
add_subdirectory(abc011)
add_subdirectory(abc012)
add_subdirectory(abc013)
add_subdirectory(abc014)
add_subdirectory(abc015)
add_subdirectory(abc016)
add_subdirectory(abc017)
add_subdirectory(abc018)
add_subdirectory(abc019)
add_subdirectory(abc020)
add_subdirectory(abc021)
add_subdirectory(abc022)
add_subdirectory(abc023)
add_subdirectory(abc024)
add_subdirectory(abc025)
add_subdirectory(abc026)
add_subdirectory(abc027)
add_subdirectory(abc028)
add_subdirectory(abc029)
add_subdirectory(abc030)
add_subdirectory(abc031)
add_subdirectory(abc032)
add_subdirectory(abc033)
add_subdirectory(abc034)
add_subdirectory(abc035)
add_subdirectory(abc036)
add_subdirectory(abc037)
add_subdirectory(abc038)
add_subdirectory(abc039)
add_subdirectory(abc040)
add_subdirectory(abc041)
add_subdirectory(abc042)
add_subdirectory(abc043)
add_subdirectory(abc044)
add_subdirectory(abc045)
add_subdirectory(abc046)
add_subdirectory(abc047)
add_subdirectory(abc048)
add_subdirectory(abc049)
add_subdirectory(abc050)
add_subdirectory(abc051)
add_subdirectory(abc052)
add_subdirectory(abc053)
add_subdirectory(abc054)
add_subdirectory(abc055)
add_subdirectory(abc056)
add_subdirectory(abc057)
add_subdirectory(abc058)
add_subdirectory(abc059)
add_subdirectory(abc060)
add_subdirectory(abc061)
add_subdirectory(abc062)
add_subdirectory(abc063)
add_subdirectory(abc064)
add_subdirectory(abc065)
add_subdirectory(abc066)
add_subdirectory(abc067)
add_subdirectory(abc068)
add_subdirectory(abc069)
add_subdirectory(abc070)
add_subdirectory(abc071)
add_subdirectory(abc072)
add_subdirectory(abc073)
add_subdirectory(abc074)
add_subdirectory(abc075)
add_subdirectory(abc076)
add_subdirectory(abc077)
add_subdirectory(abc078)
add_subdirectory(abc079)
add_subdirectory(abc080)
add_subdirectory(abc081)
add_subdirectory(abc082)
add_subdirectory(abc083)
add_subdirectory(abc084)
add_subdirectory(abc085)
add_subdirectory(abc086)
add_subdirectory(abc087)
add_subdirectory(abc088)
add_subdirectory(abc089)
add_subdirectory(abc090)
add_subdirectory(abc091)
add_subdirectory(abc092)
add_subdirectory(abc093)
add_subdirectory(abc094)
add_subdirectory(abc095)
add_subdirectory(abc096)
add_subdirectory(abc097)
add_subdirectory(abc098)
add_subdirectory(abc099)
add_subdirectory(abc100)
add_subdirectory(abc101)
add_subdirectory(abc102)
add_subdirectory(abc103)
add_subdirectory(abc104)
add_subdirectory(abc105)
add_subdirectory(abc106)
add_subdirectory(abc107)
add_subdirectory(abc108)
add_subdirectory(abc109)
add_subdirectory(abc110)
add_subdirectory(abc111)
add_subdirectory(abc112)
add_subdirectory(abc113)
add_subdirectory(abc114)
add_subdirectory(abc115)
add_subdirectory(abc116)
add_subdirectory(abc117)
add_subdirectory(abc118)
add_subdirectory(abc119)
add_subdirectory(abc120)
add_subdirectory(abc121)
add_subdirectory(abc122)
add_subdirectory(abc123)
add_subdirectory(abc124)
add_subdirectory(abc125)
add_subdirectory(abc126)
add_subdirectory(abc127)
add_subdirectory(abc128)
add_subdirectory(abc129)
add_subdirectory(abc130)
add_subdirectory(abc131)
add_subdirectory(abc132)
add_subdirectory(abc133)
add_subdirectory(abc134)
add_subdirectory(abc135)
add_subdirectory(abc136)
add_subdirectory(abc137)
add_subdirectory(abc138)
add_subdirectory(abc139)
add_subdirectory(abc140)
add_subdirectory(abc141)
add_subdirectory(abc142)
add_subdirectory(abc143)
add_subdirectory(abc144)
add_subdirectory(abc145)
add_subdirectory(abc146)
add_subdirectory(abc147)
add_subdirectory(abc148)
add_subdirectory(abc149)
add_subdirectory(abc150)
add_subdirectory(abc151)
add_subdirectory(abc152)
add_subdirectory(abc153)
add_subdirectory(abc154)
add_subdirectory(abc155)
add_subdirectory(abc156)
add_subdirectory(abc157)
add_subdirectory(abc158)
add_subdirectory(abc159)
add_subdirectory(abc160)
add_subdirectory(abc161)
add_subdirectory(abc162)
add_subdirectory(abc163)
add_subdirectory(abc164)
add_subdirectory(abc165)
add_subdirectory(abc166)
add_subdirectory(abc167)
add_subdirectory(abc168)
add_subdirectory(abc169)
add_subdirectory(abc170)
add_subdirectory(abc171)
add_subdirectory(abc172)
add_subdirectory(abc173)
add_subdirectory(abc174)
add_subdirectory(abc175)
add_subdirectory(abc176)
add_subdirectory(abc177)
add_subdirectory(abc178)
add_subdirectory(abc179)
add_subdirectory(abc180)
add_subdirectory(abc181)
add_subdirectory(abc182)
add_subdirectory(abc183)
add_subdirectory(abc184)
add_subdirectory(abc185)
add_subdirectory(abc186)
add_subdirectory(abc187)
add_subdirectory(abc188)
add_subdirectory(abc189)
add_subdirectory(abc190)
add_subdirectory(abc191)
add_subdirectory(abc192)
add_subdirectory(abc193)
add_subdirectory(abc194)
add_subdirectory(abc195)
add_subdirectory(abc196)
add_subdirectory(abc197)
add_subdirectory(abc198)
add_subdirectory(abc199)
add_subdirectory(abc200)
add_subdirectory(abc201)
add_subdirectory(abc202)
add_subdirectory(abc203)
add_subdirectory(abc204)
add_subdirectory(abc205)
add_subdirectory(abc206)
add_subdirectory(abc207)
add_subdirectory(abc208)
add_subdirectory(abc209)
add_subdirectory(abc210)
add_subdirectory(abc211)
add_subdirectory(abc212)
add_subdirectory(abc213)
add_subdirectory(abc214)
add_subdirectory(abc215)
add_subdirectory(abc216)
add_subdirectory(abc217)
add_subdirectory(abc218)
add_subdirectory(abc219)
add_subdirectory(abc220)
add_subdirectory(abc221)
add_subdirectory(abc222)
add_subdirectory(abc223)
add_subdirectory(abc224)
add_subdirectory(abc225)
add_subdirectory(abc226)
add_subdirectory(abc227)
add_subdirectory(abc228)
add_subdirectory(abc229)
add_subdirectory(abc230)
add_subdirectory(abc231)
add_subdirectory(abc232)
add_subdirectory(abc233)
add_subdirectory(abc234)
add_subdirectory(abc235)
add_subdirectory(abc236)
add_subdirectory(abc237)
add_subdirectory(abc238)
add_subdirectory(abc239)
add_subdirectory(abc240)
add_subdirectory(abc241)
add_subdirectory(abc242)
add_subdirectory(abc243)
add_subdirectory(abc244)
add_subdirectory(abc245)
add_subdirectory(abc246)
add_subdirectory(abc247)
add_subdirectory(abc248)
add_subdirectory(abc249)
add_subdirectory(abc250)
add_subdirectory(abc251)
add_subdirectory(abc252)
add_subdirectory(abc253)
add_subdirectory(abc254)
add_subdirectory(abc255)
add_subdirectory(abc256)
add_subdirectory(abc257)
add_subdirectory(abc258)
add_subdirectory(abc259)
add_subdirectory(abc260)
add_subdirectory(abc261)
add_subdirectory(abc262)
add_subdirectory(abc263)
add_subdirectory(abc264)
add_subdirectory(abc265)
add_subdirectory(abc266)
add_subdirectory(abc267)
add_subdirectory(abc268)
add_subdirectory(abc269)
add_subdirectory(abc270)
add_subdirectory(abc271)
add_subdirectory(abc272)
add_subdirectory(abc273)
add_subdirectory(abc274)
add_subdirectory(abc275)
add_subdirectory(abc276)
add_subdirectory(abc277)
add_subdirectory(abc278)
add_subdirectory(abc279)
add_subdirectory(abc280)
add_subdirectory(abc281)
add_subdirectory(abc282)
add_subdirectory(abc283)
add_subdirectory(abc284)
add_subdirectory(abc285)
add_subdirectory(abc286)
add_subdirectory(abc287)
add_subdirectory(abc288)
add_subdirectory(abc289)
add_subdirectory(abc290)
add_subdirectory(abc291)
add_subdirectory(abc292)

add_subdirectory(tenka12012qualc)
add_subdirectory(digitalarts2012)
add_subdirectory(cf14final)
add_subdirectory(dwango15p)
add_subdirectory(cf15mm)
add_subdirectory(mujinpc2016)
add_subdirectory(cf16quala)
add_subdirectory(cf16qual)
add_subdirectory(cf16final)
add_subdirectory(cf17quala)
add_subdirectory(cf17qualc)
add_subdirectory(cf17final)
add_subdirectory(apc001)
add_subdirectory(abl)
add_subdirectory(tenka1_2017)
add_subdirectory(soundhouse2018)
add_subdirectory(tenka1_2018_beginner)
add_subdirectory(keyence2019)
add_subdirectory(diverta2019)
add_subdirectory(diverta20192)
add_subdirectory(tenka1_2019_beginner)
add_subdirectory(jsc2019)
add_subdirectory(nikkei2019)
add_subdirectory(nikkei20192)
add_subdirectory(aising2019)
add_subdirectory(caddi2018b)
add_subdirectory(sumitrust2019)
add_subdirectory(panasonic2020)
add_subdirectory(hhkb2020)
add_subdirectory(aising2020)
add_subdirectory(keyence2020)
add_subdirectory(ddcc2020)
add_subdirectory(msolutions2020)
add_subdirectory(jsc2021)
add_subdirectory(zone2021)
