add_library(abc132a STATIC a.cc)
add_library(FiftyFifty STATIC fifty_fifty.cc)
# add_library(OrdinaryNumber STATIC ordinary_number.cc)
#add_library(DivideTheProblem divide_the_problem.cc)
add_library(BlueAndRedBalls blue_and_red_balls.cc)
#add_library(HopscotchAddict hopscotch_addict.cc)
#add_library(SmallProducts small_products.cc)
